--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,15 @@ dependencies:
   curved_navigation_bar: ^1.0.3
   custom_info_window: ^1.0.1
   iconly: ^1.0.1
+  uuid: ^3.0.6
+  card_swiper: ^2.0.3
+  fancy_shimmer_image: ^2.0.2
+  flutter_staggered_grid_view: ^0.6.1
+  badges: ^2.0.2
+  flutter_spinkit: ^5.1.0
+  fluttertoast: ^8.0.9
+  flutter_stripe: ^2.5.0
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
@@ -65,8 +74,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
+    - assets/images/categories/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
