--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,14 +41,15 @@ dependencies:
   curved_navigation_bar: ^1.0.3
   custom_info_window: ^1.0.1
   iconly: ^1.0.1
-  uuid: ^3.0.6
-  card_swiper: ^2.0.3
+  uuid: ^4.3.3
+  card_swiper: ^3.0.1
   fancy_shimmer_image: ^2.0.2
-  flutter_staggered_grid_view: ^0.6.1
-  badges: ^2.0.2
+  flutter_staggered_grid_view: ^0.7.0
+  badges: ^3.1.1
   flutter_spinkit: ^5.1.0
   fluttertoast: ^8.0.9
-  http: ^0.13.4
+  http: ^1.2.1  
+  the_apple_sign_in: ^1.1.1
 
 dev_dependencies:
   flutter_test:
