--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,8 +48,13 @@ dependencies:
   badges: ^3.1.1
   flutter_spinkit: ^5.1.0
   fluttertoast: ^8.0.9
-  http: ^1.2.1  
+  http: ^0.13.6
   the_apple_sign_in: ^1.1.1
+
+  cloud_firestore: ^4.14.0
+  firebase_storage: ^11.6.0
+  firebase: ^9.0.2
+  firebase_core: ^2.24.2
 
 dev_dependencies:
   flutter_test:
