--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  flutter_layout_grid: ^2.0.5
   shared_preferences: ^2.0.13
   provider: ^6.0.2
   logger: ^2.0.2+1
@@ -55,6 +56,8 @@ dependencies:
   firebase_storage: ^11.6.0
   firebase: ^9.0.2
   firebase_core: ^2.24.2
+  firebase_auth: ^4.15.3
+  
 
 dev_dependencies:
   flutter_test:
