--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,8 @@ dependencies:
   firebase: ^9.0.2
   firebase_core: ^2.24.2
   firebase_auth: ^4.15.3
-  
+  google_sign_in: ^5.4.2
+  google_sign_in_ios: ^5.7.3
 
 dev_dependencies:
   flutter_test:
